// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle component snapshot tests рендер Circle без буквы 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle component snapshot tests рендер Circle в состоянии changing 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle   changing"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle component snapshot tests рендер Circle в состоянии default 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle component snapshot tests рендер Circle в состоянии modified 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle   modified"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle component snapshot tests рендер Circle с head 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head string"
    data-testid="head"
  >
    head
  </div>
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle component snapshot tests рендер Circle с index 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  >
    0
  </p>
  <div
    class="text text_type_input text_color_input mt-4 absolute tail60 element"
  />
</div>
`;

exports[`Circle component snapshot tests рендер Circle с tail 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 string"
  >
    tail
  </div>
</div>
`;

exports[`Circle component snapshot tests рендер Circle с буквами 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    >
      A
    </p>
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle component snapshot tests рендер Circle с пропом isSmall ===  true 1`] = `
<div
  class="content "
  data-testid="circle_container"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="head"
  />
  <div
    class="circle  small default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;
